# business_calendar

./: Cargo.toml  README.md
.github/workflows/: ci.yml
.openai/: system_prompt.md
examples/: us_nyse.rs
src/: calendar.rs  date.rs  lib.rs  rules.rs  static_calendar.rs
src/easter/: mod.rs  orthodox.rs  western.rs
src/markets/: mod.rs
src/markets/asia/: mod.rs
src/markets/eu/: mod.rs
src/markets/fr/: exchange.rs  mod.rs  settlement.rs
src/markets/uk/: exchange.rs  mod.rs  settlement.rs
src/markets/us/: fed.rs  gov_bond.rs  mod.rs  nerc.rs  nyse.rs  settlement.rs  sofr.rs
src/utils/: mod.rs  weekday_utils.rs  year_range.rs
tests/: fr_uk_calendars.rs  us_calendars.rs
