[package]
name = "business_calendar"
version = "0.1.0"
edition = "2021"
authors = ["Hugo Filstroff <>"]
license = "MIT OR Apache-2.0"
description = "Global financial business-day calendars in Rust"
repository = "https://github.com/hugof38/business_calendar"
readme = "README.md"
keywords = ["finance", "calendar", "trading", "business-day"]
categories = ["date-and-time", "finance"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
